--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
     <style></style>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <div id="root"></div>
+    <script src="http://localhost:3010/main.js"></script>
   </body>
 </html>
